# openakita

./: .gitignore  README_CN.md  RELEASE.md  pyproject.toml  requirements.txt
.github/: release-channels.json
.github/workflows/: ci.yml  mobile.yml  release-dryrun.yml  release.yml  update-manifest.yml
apps/setup-center/: capacitor.config.ts  index.html  package-lock.json  package.json  vite.config.ts
apps/setup-center/android/app/: build.gradle
apps/setup-center/dist-web/: index.html
apps/setup-center/dist-web/assets/: index-1s_D2Jo5.js  index-BWCC6yVo.js  index-BloyhQer.js  index-CC49hvdw.js  index-CaS666Vz.js  index-DZLiHamR.js  index-DhooRl03.js  index-Di56_Fsv.js  index-DuY35p6U.js  index-kh7rPH8l.js
apps/setup-center/public/: manifest.json  sw.js
apps/setup-center/src/: App.tsx  localFetch.ts  main.tsx  providers.ts  styles.css
apps/setup-center/src-tauri/: Cargo.toml  tauri.conf.json
apps/setup-center/src-tauri/capabilities/: default.json
apps/setup-center/src-tauri/src/: main.rs
apps/setup-center/src-tauri/windows/: hooks.nsh  installer.nsi
apps/setup-center/src/components/: CliManager.tsx  ConfirmDialog.tsx  EnvFields.tsx  ModalOverlay.tsx  OrgAvatars.tsx  OrgChatPanel.tsx  PosterGenerator.tsx  ProviderSearchSelect.tsx  SearchSelect.tsx  Sidebar.tsx  Topbar.tsx  WebPasswordManager.tsx
apps/setup-center/src/i18n/: en.json  zh.json
apps/setup-center/src/platform/: auth.ts  index.ts  websocket.ts
apps/setup-center/src/styles/: pet.css
apps/setup-center/src/views/: AgentDashboardView.tsx  AgentSystemView.tsx  ChatView.tsx  FeedbackModal.tsx  IMConfigView.tsx  IMView.tsx  IdentityView.tsx  MCPView.tsx  MemoryView.tsx  OrgEditorView.tsx  PetView.tsx  SkillManager.tsx
cloud/aliyun-feedback-function/: README.md  index.py  requirements.txt
docs/: DINGTALK_IM_NOTES.md  FEISHU_IM_NOTES.md  WEWORK_WS_IM_NOTES.md  agent-org-technical-design.md  configuration-guide.md  deploy.md  deploy_en.md  desktop-app-guide.md  desktop-app-guide_en.md  getting-started.md  im-channel-setup-tutorial.md  im-channels.md
scripts/: feedback.py  generate_latest_json.py  generate_release_manifest.py  test_org_full_task.py
src/openakita/: config.py  main.py
src/openakita/api/: server.py
src/openakita/api/routes/: agents.py  bug_report.py  config.py  im.py  memory.py  orgs.py
src/openakita/channels/: base.py  gateway.py
src/openakita/channels/adapters/: __init__.py  dingtalk.py  feishu.py  onebot.py  qq_official.py  wework_bot.py  wework_ws.py
src/openakita/channels/media/: audio_utils.py  handler.py
src/openakita/core/: agent.py  reasoning_engine.py
src/openakita/evolution/: self_check.py
src/openakita/llm/: client.py  config.py  endpoint_manager.py  stt_client.py  types.py
src/openakita/llm/converters/: messages.py  tools.py
src/openakita/llm/providers/: anthropic.py  base.py  openai.py  openai_responses.py
src/openakita/llm/registries/: providers.json
src/openakita/memory/: lifecycle.py  storage.py  unified_store.py
src/openakita/orgs/: heartbeat.py  identity.py  models.py  runtime.py  templates.py  tool_categories.py  tool_handler.py  tools.py
src/openakita/prompt/: builder.py
src/openakita/scheduler/: executor.py
src/openakita/sessions/: manager.py  session.py
src/openakita/setup/: wizard.py
src/openakita/setup_center/: bridge.py
src/openakita/tools/: mcp.py
src/openakita/tools/browser/: browser_use_runner.py  manager.py
src/openakita/tools/definitions/: agent.py  im_channel.py
src/openakita/tools/handlers/: agent.py  browser.py  config.py  filesystem.py  im_channel.py  mcp.py
src/openakita/tracing/: tracer.py
tests/: test_memory_system.py
tests/orgs/: test_execution_robustness.py  test_heartbeat.py  test_identity.py  test_llm_task_execution.py  test_models.py  test_runtime.py  test_transparency_autonomy.py
tests/unit/: test_dingtalk_thinking_card.py  test_wework_ws_adapter.py
