[package]
name = "openakita-setup-center"
version = "1.25.12"
description = "OpenAkita Setup Center"
authors = ["OpenAkita"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.5.5", features = [] }
base64 = "0.22.1"
flate2 = "1.0.35"

[dependencies]
tauri = { version = "2.10.1", features = ["tray-icon"] }
tauri-plugin-dialog = "2"
tauri-plugin-http = { version = "2", default-features = false, features = ["rustls-tls", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs-next = "2.0.0"
reqwest = { version = "0.12.12", features = ["blocking", "json", "rustls-tls"] }
flate2 = "1.0.35"
tar = "0.4.41"
zip = "2.2.2"
base64 = "0.22.1"

once_cell = "1"

[target.'cfg(any(target_os = "macos", windows, target_os = "linux"))'.dependencies]
tauri-plugin-autostart = "2.5.1"
tauri-plugin-single-instance = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
tauri-plugin-dialog = "2"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
winreg = "0.55"

